--- a/code/Assignment_Course_Project_1.Rmd
+++ b/code/Assignment_Course_Project_1.Rmd
@@ -7,33 +7,37 @@ output: html_document
 
 # Packages used in this assignment
 ```{r, Packages}
-install.packages("downloader")
-install.packages("dplyr")
-install.packages("lubridate")
+# install.packages("downloader")
+# install.packages("dplyr")
+# install.packages("lubridate")
+install.packages("ggplot2")
+
+## loading the packages
 library(rmarkdown)
 library(downloader)
 library(dplyr)
 library(lubridate)
+library(ggplot2)
 ```
 
 # Getting the dataset for the project assignment
 This assignment uses data from
-the <a href="http://archive.ics.uci.edu/ml/">UC Irvine Machine
+the http://archive.ics.uci.edu/ml/ Irvine Machine
 Learning Repository</a>, a popular repository for machine learning
 datasets. In particular, we will be using the "Individual household
 electric power consumption Data Set" which I have made available on
 the course web site:
 
-## Downloading the zip file, unzipping it and reading the data
+# Downloading the zip file, unzipping it and reading the data
 ```{r, DownloadingData}
 url <- "https://d396qusza40orc.cloudfront.net/exdata%2Fdata%2Fhousehold_power_consumption.zip"
 download(url, dest="project_dataset.zip", mode="wb") 
 unzip("project_dataset.zip", exdir = "./data")
 ```
 
-## Reading the downloaded and unzipped file 
+# Reading the downloaded and unzipped file 
 The code above downloads and unzipped the zipped dataset file into the 
-data folder ("./COURSE4EXPLORATORY/data").
+data folder ("./data").
 The code below will point R to that folder to look for the file and read in the data from it. The datafile is called:  "household_powerconsumption.txt"
 ```{r, ReadingDataSet}
 ## for help:
@@ -42,7 +46,7 @@ file <- list.files("./data", pattern = "txt", full.names = TRUE)
 data <- read.table(file, sep = ";", header = TRUE, na.strings = "?")
 ```
 
-# Selecting the right data 
+# Selecting the right cases 
 For the assignment it is necessary to select data only between dates:
 2007-02-01 and 2007-02-02
 ```{r, SelectingCases}
@@ -62,30 +66,100 @@ head(data_twoDays)
 tail(data_twoDays)
 ```
 
-# Converting the date variable to a data class object
+# Converting the date variable to a date class object "POSIXlt"
 ```{r}
-data$date <- as.character(data$date)
-data$date <- dmy(data$date)
-head(data)
-str(data)
-?lubridate
+# converting to "character"
+data_twoDays$date <- as.character(data_twoDays$date)
+data_twoDays$time <- as.character(data_twoDays$time)
 
-str(data)
-head(data)
+# pasting date time together to be able to create a 
+# "POSIXlt" class variable 
+data_twoDays$date_time <- paste(data_twoDays$date,
+                                data_twoDays$time,
+                                sep = " ")
+head(data_twoDays)
+
+# converting $date_time to class "POSIXlt"
+data_twoDays$date_time <- strptime(data_twoDays$date_time,
+                                 "%d/%m/%Y %H:%M:%S")
+
+# inspecting the just created variable "data_twoDays$date_time"
+date_time_var <- data_twoDays$date_time
+head(date_time_var)
+typeof(date_time_var)
+
+POSIXlt
+
+# The POSIXlt data type is a vector, and the entries in the vector have 
+# the following meanings:
+# [[1]] seconds
+# [[2]] minutes
+# [[3]] hours
+# [[4]] day of month (1-31)
+# [[5]] month of the year (0-11)
+# [[6]] years since 1900
+# [[7]] day of the week (0-6 where 0 represents Sunday)
+# [[8]] day of the year (0-365)
+# [[9]] Daylight savings indicator (positive if it is daylight 
+#       savings)
+
+## Question what day of the week is 1/2/2007?
+date_time_var[1][[7]]
+
+## the answer is four
+## making a look-up table df
+days_of_the_week <- c("Sunday", "Monday", "Thuesday", "Wednesday",
+                    "Thursday", "Friday", "Saturday")
+POSIXlt_code <- c(0:6)
+
+dow_df <- cbind(days_of_the_week, POSIXlt_code)
+dow_df <- as.data.frame(dow_df)
+names(dow_df)
+which_day <- dow_df %>% filter(POSIXlt_code == 4)
+
+## The final answer:
+which_day[1]
+
 ```
 
-# Exploring the data 
-Generating the graphs for the assignment
+# Exploring the data
+Generating the graph for the assignment "project 1"
 
-```{r, Exploring_Graph1_GlobalActivePower}
+## Plot 1
+```{r, Graph1_GlobalActivePower}
 names(data_twoDays)
-png
+
+## save the file
+png(filename = "./images/plot1.png", width = 480, height = 480, units = "px")
 hist(data_twoDays$global_active_power, col = "red", xlab = "Global Active Power", ylab = "Frequency", main = "Global Active Power")
-
-
-
-
-
- 
+dev.off()  
 ``` 
+
+## Plot 2
+```{r, Graph2_GAP_perDay}
+levels_date <- levels(as.factor(data_twoDays$date))
+
+## plot2.png in ggplot2 syntax 
+png(filename = "./images/plot2.png", width = 480, height = 480, units = "px")
+names(data_twoDays)
+plot2 <- ggplot(data_twoDays, aes(date_time, global_active_power))
+plot2 + geom_line() +
+  scale_x_datetime(date_breaks = "1 day", date_labels = c("Saturday", "Thursday", "Friday")) +
+  ylab("Global Active Power (kilowatts)") + 
+theme_bw() +
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_blank(),
+        axis.title.x = element_blank(),
+        axis.text.x = element_text(size = 14),
+        axis.title.y = element_text(size = 14)) +
+  theme(plot.margin = unit(c(1,1,1,1), "cm"))
+dev.off()
+
+
+ +
+        margin(t = 2, r = 2, b = 2, l = 2, unit = "pt")
+?margin
+?scale_x_datetime
+??plot.margin
 
